--- a/index.html
+++ b/index.html
@@ -110,18 +110,21 @@
         var ctx = canvas.getContext('2d');
         var ww = window.innerWidth * .5;
         var hh = window.innerHeight * .6;
-        var raf = 0, fgColor, fgMgr, bgColor;
+        var raf = 0;
         canvas.width = ww;
         canvas.height = hh;
 
         var colorMgr =
         {
-            radd: 1, gadd: -1, badd: 1, inColor: true,
+            radd: 1, gadd: -1, badd: 1, inColor: true, fgColor: '', bgColor: 'rgba(255, 255, 255,',
             rando: function () { return Math.floor(Math.random() * 100); },
             next: function () {
                 if (!this.inColor)
-                    return 'black';
-
+                {
+                    this.bgColor = 'rgba(255, 255, 255,';
+                    this.fgColor = 'black';
+                    return;
+                }
                 this.red += this.radd;
                 this.green += this.gadd;
                 this.blue += this.badd;
@@ -131,7 +134,7 @@
                 if (this.green < 0) { this.green = 0; this.gadd *= -1; }
                 if (this.blue > 255) { this.blue = 255; this.badd *= -1; }
                 if (this.blue < 0) { this.blue = 0; this.badd *= -1; }
-                return 'rgba(' + this.red + ',' + this.green + ',' + this.blue + ')';
+                this.fgColor = 'rgba(' + this.red + ',' + this.green + ',' + this.blue + ')';
             }
         }
         var spiro = {
@@ -174,7 +177,7 @@
                 document.getElementById("scale").value = this.scale;
                 ctx.lineWidth = this.width;
 
-                ctx.strokeStyle = fgColor;
+                ctx.strokeStyle = colorMgr.fgColor;
                 ctx.stroke();
 
                 ctx.restore();
@@ -195,7 +198,10 @@
             document.getElementById("radius2").value = spiro.radius2;
             document.getElementById("radius3").value = spiro.radius3;
             document.getElementById("scale").value = spiro.scale = 20;
-            bgColor = 'rgba(' + rando1() + ',' + rando1() + ',' + rando1() + ',';
+            if (colorMgr.inColor)
+                colorMgr.bgColor = 'rgba(' + rando1() + ',' + rando1() + ',' + rando1() + ',';
+            else
+                colorMgr.bgColor = 'rgba(255, 255, 255,';
             if (!raf) pause();
         }
         function pause() {
@@ -222,7 +228,6 @@
             document.getElementById("rotate").value = 100 * spiro.rotateSpeed;
             document.getElementById("width").value = spiro.width;
             document.getElementById("blur").value = 100 - 100 * spiro.blur;
-            bgColor = 'rgba(' + rando1() + ',' + rando1() + ',' + rando1() + ',';
 
             colorMgr.red = colorMgr.rando();
             colorMgr.green = colorMgr.rando();
@@ -231,7 +236,8 @@
         }
 
         function draw() {
-            ctx.fillStyle = bgColor + spiro.blur + ')';
+            colorMgr.next();
+            ctx.fillStyle = colorMgr.bgColor + spiro.blur + ')';
             ctx.fillRect(0, 0, ww, hh);
 
             spiro.draw();
@@ -240,7 +246,6 @@
             spiro.offset += spiro.speed;
             spiro.rotateAngle += spiro.rotateSpeed;
 
-            fgColor = colorMgr.next();
             raf = window.requestAnimationFrame(draw);
         }
 
